<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FF345678" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloIngreso"
        android:gravity="center"
        android:textSize="10pt"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/textNombre"
            android:layout_width="68pt"
        	android:layout_height="fill_parent"
        	android:text="@string/nombre"
        	android:layout_weight="1"
        	android:textSize="10pt"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true" />
        <EditText
            android:id="@+id/editNombre"
            android:layout_width="fill_parent"
        	android:layout_height="16pt"
        	android:inputType="text"
        	android:text="@string/editNombre"
        	android:layout_weight="2"
        	android:textSize="8pt"
        	android:textColor="#0000FF"
        	android:typeface="monospace" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/textApellido"
            android:layout_width="68pt"
        	android:layout_height="fill_parent"
        	android:text="@string/apellido"
        	android:layout_weight="1"
        	android:textSize="10pt"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true"
        	android:typeface="serif"
        	 />
        <EditText
            android:id="@+id/editApellido"
            android:layout_width="fill_parent"
        	android:layout_height="16pt"
        	android:inputType="text"
        	android:text="@string/editApellido"
        	android:layout_weight="2"
        	android:textSize="8pt"
        	android:textColor="#0000FF"
        	android:textStyle="bold"
        	android:typeface="serif" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/textCelular"
            android:layout_width="68pt"
        	android:layout_height="fill_parent"
        	android:text="@string/celular"
        	android:layout_weight="1"
        	android:textSize="10pt"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true" />
        <EditText
            android:id="@+id/editCelular"
             android:layout_width="fill_parent"
        	android:layout_height="16pt"
        	android:inputType="text"
        	android:text="@string/editCelular"
        	android:layout_weight="2"
        	android:textSize="8pt" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancelar" 
            android:layout_toLeftOf="@+id/aceptar"
            android:textStyle="bold"/>

    	<Button
    	    android:id="@+id/aceptar"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right"
    	    android:text="@string/aceptar"
    	    android:layout_alignParentRight="true"
    	    android:textStyle="bold" />

    </RelativeLayout>
        
</LinearLayout>